tests/rosetta/out/Rust/99-bottles-of-beer-2.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/99_bottles_of_beer_2.rs:77:53
   |
77 |             a = { let mut tmp = a.clone(); tmp.push(&p[(i) as usize..(i + 1) as usize]); tmp };
   |                                                ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |                                                |
   |                                                arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12
help: try using a conversion method
   |
77 |             a = { let mut tmp = a.clone(); tmp.push((&p[(i) as usize..(i + 1) as usize]).to_string()); tmp };
   |                                                     +                                  +++++++++++++

error[E0308]: mismatched types
  --> /tmp/99_bottles_of_beer_2.rs:95:17
   |
95 |             s = format!("{}{}", s, a[(k) as usize]);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/99_bottles_of_beer_2.rs:98:13
   |
98 |         s = format!("{}{}", s, &p[((p.len() as i32) - 1) as usize..((p.len() as i32)) as usize]);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/99_bottles_of_beer_2.rs:99:24
   |
99 |         let w = fields(s);
   |                 ------ ^- help: try using a conversion method: `.to_string()`
   |                 |      |
   |                 |      expected `String`, found `&str`
   |                 arguments to this function are incorrect
   |
note: expected because the closure was earlier called with an argument of type `String`
  --> /tmp/99_bottles_of_beer_2.rs:60:24
   |
60 |         let w = fields(s);
   |                 ------ ^ expected because this argument is of type `String`
   |                 |
   |                 in this closure call
note: closure parameter defined here
  --> /tmp/99_bottles_of_beer_2.rs:3:24
   |
3  |     let fields = move |s: String| -> Vec<String> {
   |                        ^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
